# derivative

./: .gitignore  CMakeLists.txt
docs/html/: _formulas.tex  annotated.html  class_cos-members.html  class_cos.html  class_ctg-members.html  class_ctg.html  class_division-members.html  class_division.html  class_e-members.html  class_e.html  class_func-members.html  class_func.html  class_lg-members.html  class_lg.html  class_ln-members.html  class_ln.html  class_main_window-members.html  class_main_window.html  class_mult-members.html  class_mult.html  class_num-members.html  class_num.html  class_p_i-members.html  class_p_i.html  class_pow-members.html  class_pow.html  class_sin-members.html  class_sin.html  class_sqrt-members.html  class_sqrt.html  class_sub-members.html  class_sub.html  class_sum-members.html  class_sum.html  class_tg-members.html  class_tg.html  class_x-members.html  class_x.html  classes.html  classsimpleparser_1_1_parser-members.html  (+26 more)
docs/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_7.js  all_8.js  all_a.js  all_b.js  all_d.js  classes_1.js  classes_2.js  classes_5.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  namespaces_0.js  searchdata.js  variables_0.js  variables_1.js
src/: CMakeLists.txt
src/app/: CMakeLists.txt  app.cpp
src/functions/: CMakeLists.txt  functions.cpp  functions.h
src/parser/: parser.cpp  parser.h
src/qt/: CMakeLists.txt
src/qt/forms/: mainwindow.ui
src/qt/include/: mainwindow.h
src/qt/src/: mainwindow.cpp
tests/: CMakeLists.txt  test_functions.cpp  test_parser.cpp
